prediction parameter easy ocr 내부에서 가져오기

--- a/recog.ipynb
+++ b/recog.ipynb
@@ -10,29 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n",
-      "model\\custom.pth\n",
-      "model\n",
-      "custom.pth\n",
-      "before recog\n",
-      "model\\custom.pth\n",
-      "get recog\n",
-      "model\\custom.pth\n",
-      "model\\custom.pth\n",
-      "model\\custom.pth\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
       "c:\\Users\\다인\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\functional.py:505: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\aten\\src\\ATen\\native\\TensorShape.cpp:4319.)\n",
       "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
       "c:\\Users\\다인\\EASYOCR-custom\\EasyOCR\\trainer\\config_files\\custom.py:123: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
@@ -45,7 +23,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\다인\\EASYOCR-custom\\demo_image\n"
+      "c:\\Users\\다인\\EASYOCR-custom\\demo_image\n",
+      "filename: 'plate.jpg', confidence: 0.9996, string: '206호1213[s][s][s][s][s][s][s][s][s][s][s][s][s][s][s][s][s][s]'\n"
      ]
     },
     {
@@ -55,21 +34,12 @@
       "c:\\Users\\다인\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:668: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
       "  warnings.warn(warn_msg)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "filename: 'plate.jpg', confidence: 0.9996, string: '206호1213[s][s][s][s][s][s][s][s][s][s][s][s][s][s][s][s][s][s]'\n"
-     ]
     }
    ],
    "source": [
     "from EasyOCR.easyocr import *\n",
     "import os\n",
     "import cv2\n",
-    "import yaml\n",
-    "from EasyOCR.trainer.utils import AttrDict\n",
     "\n",
     "# GPU 설정\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = '0,1'\n",
@@ -87,23 +57,13 @@
     "\n",
     "    return file_list, len(file_list)\n",
     "\n",
-    "def get_config(file_path):\n",
-    "    with open(file_path, 'r', encoding=\"utf8\") as stream:\n",
-    "        opt = yaml.safe_load(stream)\n",
-    "    opt = AttrDict(opt)\n",
-    "    return opt\n",
-    "opt = get_config(\"EasyOCR/trainer/config_files/custom.yaml\")\n",
-    "prd = opt.Prediction\n",
-    "\n",
-    "print(type(prd))\n",
-    "\n",
     "reader = Reader(['ko'], gpu=True,\n",
     "                model_storage_directory='model',\n",
     "                user_network_directory='EasyOCR\\\\trainer\\\\config_files',\n",
-    "                recog_network='custom',prediction=prd)\n",
+    "                recog_network='custom')\n",
     "\n",
     "\n",
-    "files, count = get_files('demo_image')\n",
+    "files, count = get_files('demo_image')  \n",
     "\n",
     "for idx, file in enumerate(files):\n",
     "    filename = os.path.basename(file)\n",
